Import of ZOFFIX/App-ZofCMS-Plugin-LinksToSpecs-CSS-0.0103 from CPAN.
gitpan-cpan-distribution: App-ZofCMS-Plugin-LinksToSpecs-CSS
gitpan-cpan-version:      0.0103
gitpan-cpan-path:         ZOFFIX/App-ZofCMS-Plugin-LinksToSpecs-CSS-0.0103.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: App-ZofCMS-Plugin-LinksToSpecs-CSS
-version: 0.0102
+version: 0.0103
 author:
   - 'Zoffix Znet <zoffix@cpan.org>'
 abstract: easily include links to properties in CSS2.1 specification
@@ -9,11 +9,13 @@ resources:
   license: http://dev.perl.org/licenses/
 build_requires:
   Test::More: 0
+configure_requires:
+  Module::Build: 0.34
 provides:
   App::ZofCMS::Plugin::LinksToSpecs::CSS:
     file: lib/App/ZofCMS/Plugin/LinksToSpecs/CSS.pm
-    version: 0.0102
-generated_by: Module::Build version 0.280801
+    version: 0.0103
+generated_by: Module::Build version 0.34
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
